remove extra spacing in markdown quotes: fix #3522

--- a/ui/scss/component/_markdown-preview.scss
+++ b/ui/scss/component/_markdown-preview.scss
@@ -55,6 +55,14 @@
   table {
     margin-top: var(--spacing-medium);
   }
+  
+  blockquote {
+    white-space: normal;
+    
+    p:first-child {
+      margin-top: 0;
+    }
+  }
 
   // Tables
   table {
